--- a/Tasks/KubernetesV1/package.json
+++ b/Tasks/KubernetesV1/package.json
@@ -12,10 +12,10 @@
     "@types/uuid": "^8.3.0",
     "agent-base": "^6.0.2",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
-    "azure-pipelines-tasks-docker-common": "2.268.0",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.270.0",
+    "azure-pipelines-tasks-docker-common": "^2.268.0",
     "azure-pipelines-tasks-kubernetes-common": "^2.267.0",
-    "azure-pipelines-tasks-utility-common": "3.267.0",
+    "azure-pipelines-tasks-utility-common": "^3.270.0",
     "azure-pipelines-tool-lib": "^2.0.10",
     "del": "2.2.0",
     "moment": "^2.29.4"
