--- a/_generated/UniversalPackagesV1_Wif/package.json
+++ b/_generated/UniversalPackagesV1_Wif/package.json
@@ -28,6 +28,6 @@
     "azure-pipelines-tasks-utility-common": "3.267.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
