--- a/Tasks/AzureFunctionAppContainerV1/package.json
+++ b/Tasks/AzureFunctionAppContainerV1/package.json
@@ -20,19 +20,19 @@
   "homepage": "https://github.com/Microsoft/vsts-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "1.0.7",
     "agent-base": "^6.0.2",
-    "azure-devops-node-api": "11.2.0",
-    "azure-pipelines-task-lib": "4.11.0",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
-    "azure-pipelines-tasks-webdeployment-common": "^4.265.0",
+    "azure-devops-node-api": "^15.1.3",
+    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-tasks-azure-arm-rest": "3.270.0",
+    "azure-pipelines-tasks-webdeployment-common": "^4.268.0",
     "moment": "2.29.4",
     "q": "1.4.1",
     "uuid": "3.1.0",
     "xml2js": "^0.6.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
