--- a/Tasks/AzureCLIV1/package.json
+++ b/Tasks/AzureCLIV1/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.3.1",
     "@types/q": "1.0.7",
     "azure-devops-node-api": "14.0.2",
