--- a/Tasks/AzureCLIV3/package.json
+++ b/Tasks/AzureCLIV3/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/mocha": "^5.2.7",
     "@types/node": "^20.3.1",
     "azure-devops-node-api": "14.0.2",
     "azure-pipelines-task-lib": "^4.17.2",
