--- a/_generated/AzureCLIV1_Node24/package.json
+++ b/_generated/AzureCLIV1_Node24/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.0",
     "@types/q": "1.0.7",
     "azure-devops-node-api": "^15.1.3",
