--- a/_generated/AzureCLIV3_Node24/package.json
+++ b/_generated/AzureCLIV3_Node24/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/mocha": "^5.2.7",
     "@types/node": "^24.10.0",
     "azure-devops-node-api": "^15.1.3",
     "azure-pipelines-task-lib": "^5.2.4",
