--- a/Tasks/GitHubReleaseV1/package.json
+++ b/Tasks/GitHubReleaseV1/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^24.10.4",
+    "@types/node": "^24.10.0",
     "@types/q": "1.5.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-utility-common": "3.267.0",
+    "azure-pipelines-tasks-utility-common": "^3.270.0",
     "brace-expansion": "^1.1.12",
     "browserify-mime": "1.2.9",
     "glob": "7.1.2",
