--- a/Tasks/AzureRmWebAppDeploymentV5/package.json
+++ b/Tasks/AzureRmWebAppDeploymentV5/package.json
@@ -23,9 +23,9 @@
     "@types/node": "^24.10.0",
     "@types/q": "1.0.7",
     "agent-base": "^6.0.2",
-    "azure-pipelines-tasks-azure-arm-rest": "3.270.0",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.270.0",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-webdeployment-common": "4.265.0",
+    "azure-pipelines-tasks-webdeployment-common": "^4.268.0",
     "moment": "^2.29.4",
     "q": "1.4.1",
     "uuid": "3.1.0",
