--- a/Tasks/KubeloginInstallerV0/package.json
+++ b/Tasks/KubeloginInstallerV0/package.json
@@ -26,7 +26,7 @@
     "@types/q": "^1.0.7",
     "agent-base": "^6.0.2",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.270.0",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
