--- a/_generated/UniversalPackagesV1_Wif/package.json
+++ b/_generated/UniversalPackagesV1_Wif/package.json
@@ -20,12 +20,12 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-artifacts-common": "^2.270.0",
     "azure-pipelines-tasks-packaging-common": "^3.270.0",
-    "azure-pipelines-tasks-utility-common": "3.270.0"
+    "azure-pipelines-tasks-utility-common": "^3.270.0"
   },
   "devDependencies": {
     "typescript": "^5.7.2"
