--- a/Tasks/NuGetAuthenticateV1/Tests/.npmrc
+++ b/Tasks/NuGetAuthenticateV1/Tests/.npmrc
@@ -1,1 +1,3 @@
-@echo off
+registry=https://pkgs.dev.azure.com/mseng/PipelineTools/_packaging/PipelineTools_PublicPackages/npm/registry/
+
+always-auth=true
