--- a/Tasks/NotationV0/package.json
+++ b/Tasks/NotationV0/package.json
@@ -12,13 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^16.11.39",
-    "azure-devops-node-api": "^13.0.0",
-    "azure-pipelines-task-lib": "^5.2.1",
-    "azure-pipelines-tasks-artifacts-common": "^2.262.0",
+    "@types/node": "^24.10.0",
+    "azure-devops-node-api": "^15.1.3",
+    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-tasks-artifacts-common": "^2.270.0",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
