--- a/Tasks/PackerBuildV1/package.json
+++ b/Tasks/PackerBuildV1/package.json
@@ -11,7 +11,7 @@
     "@types/q": "^1.0.7",
     "agent-base": "^6.0.2",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-azure-arm-rest": "3.263.1",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.270.0",
     "decompress-zip": "^0.3.3",
     "extract-zip": "2.0.1"
   },
