--- a/Tasks/AzureContainerAppsV1/package.json
+++ b/Tasks/AzureContainerAppsV1/package.json
@@ -21,14 +21,14 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "1.0.7",
     "agent-base": "^6.0.2",
-    "azure-pipelines-task-lib": "^4.17.2",
-    "azure-pipelines-tasks-artifacts-common": "^2.262.0",
-    "azure-pipelines-tasks-azure-arm-rest": "^3.263.1"
+    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-tasks-artifacts-common": "^2.270.0",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.270.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
