--- a/Tasks/JenkinsQueueJobV2/package.json
+++ b/Tasks/JenkinsQueueJobV2/package.json
@@ -22,7 +22,7 @@
     "@types/q": "^1.0.7",
     "@types/shelljs": "^0.3.0",
     "azure-pipelines-task-lib": "^5.2.4",
-    "request": "^2.88.2"
+    "typed-rest-client": "^2.1.0"
   },
   "devDependencies": {
     "typescript": "^5.7.2"
