--- a/Tasks/AppCenterTestV1/package.json
+++ b/Tasks/AppCenterTestV1/package.json
@@ -32,6 +32,7 @@
     "typescript": "5.1.6"
   },
   "overrides": {
-    "form-data": "^2.5.4"
+    "form-data": "^2.5.4",
+    "jsonwebtoken": "^9.0.3"
   }
 }
